--- a/Transforming.ipynb
+++ b/Transforming.ipynb
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "outputs": [
     {
      "name": "stdout",
@@ -556,7 +556,7 @@
     "for t in text:\n",
     "    prompt = f\"\"\"Proofread and correct the following text\n",
     "    and only display the corrected version. If you don't find\n",
-    "    and errors, just say \"No errors found\". Don't use\n",
+    "    any errors, just say \"No errors found\". Don't use\n",
     "    quotes around the text and don't print the original text:\n",
     "    ```{t}```\"\"\"\n",
     "    response = get_completion(prompt)\n",
@@ -565,14 +565,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-11T13:17:50.406384Z",
-     "start_time": "2023-05-11T13:17:38.170784Z"
+     "end_time": "2023-05-11T13:19:35.551049Z",
+     "start_time": "2023-05-11T13:19:24.675368Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "outputs": [],
    "source": [
     "text = f\"\"\"\n",
@@ -584,10 +584,7 @@
     "though. I think there might be other options that are bigger for\n",
     "the same price.  It arrived a day earlier than expected, so I got\n",
     "to play with it myself before I gave it to my daughter.\n",
-    "\"\"\"\n",
-    "prompt = f\"proofread and correct this review: ```{text}```\"\n",
-    "response = get_completion(prompt)\n",
-    "print(response)"
+    "\"\"\""
    ],
    "metadata": {
     "collapsed": false
@@ -595,14 +592,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 38,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I got this for my daughter's birthday because she keeps taking mine from my room. Yes, adults also like pandas too. She takes it everywhere with her, and it's super soft and cute. However, one of the ears is a bit lower than the other, and I don't think that was designed to be asymmetrical. Additionally, it's a bit small for what I paid for it. I think there might be other options that are bigger for the same price. On the positive side, it arrived a day earlier than expected, so I got to play with it myself before I gave it to my daughter.\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = f\"proofread and correct this review: ```{text}```\"\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T13:20:10.295425Z",
+     "start_time": "2023-05-11T13:20:00.829488Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "<span style=\"color:red;font-weight:700;text-decoration:line-through;\">Got </span><span style=\"color:red;font-weight:700;\">I got </span>this for my <span style=\"color:red;font-weight:700;text-decoration:line-through;\">daughter for her </span><span style=\"color:red;font-weight:700;\">daughter's </span>birthday <span style=\"color:red;font-weight:700;text-decoration:line-through;\">cuz </span><span style=\"color:red;font-weight:700;\">because </span>she keeps taking <span style=\"color:red;font-weight:700;text-decoration:line-through;\">¶ </span>mine from my <span style=\"color:red;font-weight:700;text-decoration:line-through;\">room.  </span><span style=\"color:red;font-weight:700;\">room. </span>Yes, adults also like pandas <span style=\"color:red;font-weight:700;text-decoration:line-through;\">too.  </span><span style=\"color:red;font-weight:700;\">too. </span>She takes <span style=\"color:red;font-weight:700;text-decoration:line-through;\">¶ </span>it everywhere with her, and it's super soft and <span style=\"color:red;font-weight:700;text-decoration:line-through;\">cute.  One </span><span style=\"color:red;font-weight:700;\">cute. However, one </span>of the <span style=\"color:red;font-weight:700;text-decoration:line-through;\">¶ </span>ears is a bit lower than the other, and I don't think that was <span style=\"color:red;font-weight:700;text-decoration:line-through;\">¶ </span>designed to be asymmetrical. <span style=\"color:red;font-weight:700;text-decoration:line-through;\">It's </span><span style=\"color:red;font-weight:700;\">Additionally, it's </span>a bit small for what I paid for <span style=\"color:red;font-weight:700;text-decoration:line-through;\">it ¶ though. </span><span style=\"color:red;font-weight:700;\">it. </span>I think there might be other options that are bigger for <span style=\"color:red;font-weight:700;text-decoration:line-through;\">¶ </span>the same <span style=\"color:red;font-weight:700;text-decoration:line-through;\">price.  It </span><span style=\"color:red;font-weight:700;\">price. On the positive side, it </span>arrived a day earlier than expected, so I got <span style=\"color:red;font-weight:700;text-decoration:line-through;\">¶ </span>to play with it myself before I gave it to my daughter."
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from redlines import Redlines\n",
     "\n",
     "diff = Redlines(text,response)\n",
-    "display(Markdown(diff.output_markdown))\n",
-    "\n",
+    "display(Markdown(diff.output_markdown))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T13:20:49.970934Z",
+     "start_time": "2023-05-11T13:20:49.941917Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Title: A Soft and Cute Panda Plushie for All Ages\n\nAs an adult, I can attest that pandas are not just for kids. That's why I got this adorable panda plushie for my daughter's birthday, but let's be real, I wanted one for myself too. The softness of the material is unmatched, and the cuteness factor is off the charts. \n\nMy daughter takes it everywhere with her, and I can see why. The plushie is the perfect size to cuddle with and carry around. However, I did notice that one of the ears is a bit lower than the other, which I don't think was intentional. Despite this minor flaw, the overall quality of the product is impressive.\n\nThe only downside is that the price seems a bit steep for the size of the plushie. I believe there are other options available that are bigger for the same price. Nonetheless, the product arrived a day earlier than expected, which gave me the opportunity to play with it myself before giving it to my daughter.\n\nIn conclusion, if you're looking for a soft and cute panda plushie that can be enjoyed by all ages, this is a great option. Just be aware that there may be other options available that offer more value for the price."
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
     "prompt = f\"\"\"\n",
     "proofread and correct this review. Make it more compelling.\n",
     "Ensure it follows APA style guide and targets an advanced reader.\n",
@@ -613,7 +666,11 @@
     "display(Markdown(response))"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T13:24:54.109360Z",
+     "start_time": "2023-05-11T13:24:34.743837Z"
+    }
    }
   },
   {
