Review in French

--- a/Transforming.ipynb
+++ b/Transforming.ipynb
@@ -685,11 +685,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 47,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lors de l'achat d'un cadeau pour un être cher, il est important de prendre en compte ses préférences et ses besoins. C'est pourquoi j'ai choisi d'offrir à ma fille un panda en peluche pour son anniversaire, car elle avait exprimé son désir d'avoir un animal en peluche doux et mignon. Bien que ce soit un jouet généralement associé aux enfants, je suis convaincu que les adultes peuvent également apprécier la compagnie d'un panda en peluche.\n",
+      "\n",
+      "Ma fille a été ravie de recevoir ce cadeau et l'emporte partout avec elle. La peluche est en effet très douce et agréable au toucher, ce qui en fait un compagnon de jeu idéal pour les enfants. Cependant, j'ai remarqué que l'une des oreilles était légèrement plus basse que l'autre, ce qui peut sembler être un défaut de fabrication. Bien que cela n'affecte pas la qualité de la peluche, cela peut être un point à prendre en compte pour les acheteurs potentiels.\n",
+      "\n",
+      "En ce qui concerne le prix, je pense que la peluche est un peu petite pour le montant que j'ai payé. Bien qu'elle soit de bonne qualité, il existe d'autres options plus grandes pour le même prix sur le marché. Cependant, je suis satisfait de la livraison rapide, car la peluche est arrivée un jour plus tôt que prévu, ce qui m'a permis de la tester avant de l'offrir à ma fille.\n",
+      "\n",
+      "En conclusion, la peluche panda est un cadeau mignon et doux pour les enfants et les adultes. Bien qu'il y ait des options plus grandes pour le même prix, la qualité de la peluche est satisfaisante. Cependant, les acheteurs potentiels doivent être conscients de la possibilité d'un défaut de fabrication mineur, comme une oreille asymétrique. Dans l'ensemble, je recommande cette peluche pour ceux qui cherchent un compagnon de jeu doux et mignon.\n"
+     ]
+    }
+   ],
+   "source": [
+    "review = \"\"\"\n",
+    "Je l'ai offert à ma fille pour son anniversaire parce qu'elle n'arrête pas de prendre le mien dans ma chambre.\n",
+    "Oui, les adultes aiment aussi les pandas.\n",
+    "Elle l'emporte partout avec elle et il est super doux et mignon.\n",
+    "L'une des oreilles est un peu plus basse que l'autre, et je ne pense pas que cela ait été conçu pour être asymétrique.\n",
+    "Il est un peu petit pour le prix que j'ai payé.\n",
+    "Je pense qu'il y a d'autres options plus grandes pour le même prix.\n",
+    "Il est arrivé un jour plus tôt que prévu, j'ai donc pu jouer avec avant de l'offrir à ma fille.\n",
+    "\"\"\"\n",
+    "\n",
+    "prompt = f\"\"\"\n",
+    "Réécris l'avis consommateur suivant, entre apostrophes triples,\n",
+    "dans un style plus formel et plus développé,\n",
+    "avec des paragraphes et une conclusion.\n",
+    "\n",
+    "Avis : '''{review}'''\n",
+    "\"\"\"\n",
+    "\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
+   ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T13:33:14.546762Z",
+     "start_time": "2023-05-11T13:32:38.357978Z"
+    }
    }
   },
   {
