Experiment in French.

--- a/Expanding.ipynb
+++ b/Expanding.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import openai\n",
@@ -26,12 +26,16 @@
     "openai.api_key  = os.getenv('OPENAI_API_KEY')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T14:24:29.086716Z",
+     "start_time": "2023-05-11T14:24:28.847430Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "def get_completion(prompt, model=\"gpt-3.5-turbo\",temperature=0): # Andrew mentioned that the prompt/ completion paradigm is preferable for this class\n",
@@ -44,7 +48,11 @@
     "    return response.choices[0].message[\"content\"]"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T14:26:18.492102Z",
+     "start_time": "2023-05-11T14:26:18.481959Z"
+    }
    }
   },
   {
@@ -58,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# given the sentiment from the lesson on \"inferring\",\n",
@@ -100,13 +108,35 @@
     "\"\"\""
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T14:45:54.236781Z",
+     "start_time": "2023-05-11T14:45:54.227249Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dear valued customer,\n",
+      "\n",
+      "Thank you for taking the time to leave a review about your recent purchase. We are sorry to hear that you experienced an increase in prices and that the quality of the product did not meet your expectations. We apologize for any inconvenience this may have caused.\n",
+      "\n",
+      "We would like to assure you that we take all feedback seriously and are constantly working to improve our products and services. If you have any further concerns, please do not hesitate to reach out to our customer service team who will be happy to assist you.\n",
+      "\n",
+      "Thank you again for your review and for choosing our brand. We hope to have the opportunity to serve you better in the future.\n",
+      "\n",
+      "Best regards,\n",
+      "\n",
+      "AI customer agent\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "You are a customer service AI assistant.\n",
@@ -127,7 +157,11 @@
     "print(response)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T14:46:06.737898Z",
+     "start_time": "2023-05-11T14:45:55.933432Z"
+    }
    }
   },
   {
@@ -141,8 +175,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dear valued customer,\n",
+      "\n",
+      "Thank you for taking the time to leave a review of your recent purchase. We deeply apologize for any inconvenience you may have experienced with the price increase and the quality of our product. We always strive to provide the best possible experience for our customers, and we are sorry that we fell short in this case.\n",
+      "\n",
+      "If you would like to discuss this matter further, please do not hesitate to contact our customer service team. We would be more than happy to assist you with any concerns or issues you may have.\n",
+      "\n",
+      "Once again, thank you for your feedback. We appreciate your honesty and hope to have the opportunity to serve you better in the future.\n",
+      "\n",
+      "Best regards,\n",
+      "\n",
+      "AI customer agent\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "You are a customer service AI assistant.\n",
@@ -163,7 +215,11 @@
     "print(response)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T14:48:00.905077Z",
+     "start_time": "2023-05-11T14:47:50.538927Z"
+    }
    }
   },
   {
@@ -177,11 +233,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moi, mon plat préféré c'est le coq au vin, un plat traditionnel de la cuisine française à base de poulet mariné dans du vin rouge et accompagné de champignons et de lardons.\n",
+      "Moi, mon plat préféré c'est le ramen, un délicieux bol de nouilles servies dans un bouillon savoureux, agrémenté de viande, d'œufs et de légumes, typique de la cuisine japonaise.\n",
+      "Moi, mon plat préféré c'est les spaghetti à la carbonara, j'adore le mélange de la sauce crémeuse avec le bacon croustillant et le parmesan fondant.\n",
+      "Moi, mon plat préféré c'est le fish and chips, un plat typique de la cuisine anglaise que j'adore déguster avec une sauce tartare et une pinte de bière.\n",
+      "Moi, mon plat préféré de la cuisine polonaise c'est les pierogi, ces délicieux petits chaussons farcis aux pommes de terre et au fromage blanc !\n"
+     ]
+    }
+   ],
+   "source": [
+    "countries = [\n",
+    "    \"française\",\n",
+    "    \"japonaise\",\n",
+    "    \"italienne\",\n",
+    "    \"anglaise\",\n",
+    "    \"polonaise\"\n",
+    "]\n",
+    "for country in countries:\n",
+    "    prompt = f\"\"\"\n",
+    "    Tu réponds à une personne qui aime la cuisine {country}. Écris une phrase détaillée commençant\n",
+    "    par les mots suivants :\n",
+    "\n",
+    "    \"Moi, mon plat préféré c'est…\"\n",
+    "    \"\"\"\n",
+    "\n",
+    "    response = get_completion(prompt, temperature=0.7)\n",
+    "    print(response)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T15:19:11.847958Z",
+     "start_time": "2023-05-11T15:18:52.442163Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T14:54:01.603594Z",
+     "start_time": "2023-05-11T14:54:01.590812Z"
+    }
    }
   }
  ],
