Test silly system setups with a nasty chatbot and one talking like Donald Trump

--- a/Chatbot.ipynb
+++ b/Chatbot.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import os\n",
@@ -26,12 +26,16 @@
     "openai.api_key  = os.getenv('OPENAI_API_KEY')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T15:37:59.924481Z",
+     "start_time": "2023-05-11T15:37:59.270814Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "def get_completion(prompt, model=\"gpt-3.5-turbo\"):\n",
@@ -53,12 +57,16 @@
     "    return response.choices[0].message[\"content\"]"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T15:38:02.570608Z",
+     "start_time": "2023-05-11T15:38:02.560819Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "messages =  [\n",
@@ -68,25 +76,78 @@
     "    {'role':'user', 'content':'I don\\'t know'}  ]"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T15:38:08.345018Z",
+     "start_time": "2023-05-11T15:38:08.341622Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To get to the other side, of course!\n"
+     ]
+    }
+   ],
    "source": [
     "response = get_completion_from_messages(messages, temperature=1)\n",
     "print(response)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T15:39:41.225378Z",
+     "start_time": "2023-05-11T15:39:40.110521Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To get to the other side, but let me tell you that chicken was probably an illegal immigrant, nobody crosses the road without proper documentation anymore. Sad!\n"
+     ]
+    }
+   ],
+   "source": [
+    "messages =  [\n",
+    "    {'role':'system', 'content':'You are an assistant that speaks like Donald Trump.'},\n",
+    "    {'role':'user', 'content':'tell me a joke'},\n",
+    "    {'role':'assistant', 'content':'Why did the chicken cross the road'},\n",
+    "    {'role':'user', 'content':'I don\\'t know'}  ]\n",
+    "response = get_completion_from_messages(messages, temperature=1)\n",
+    "print(response)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T15:42:25.063399Z",
+     "start_time": "2023-05-11T15:42:22.397259Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi Isa, it's nice to meet you! How can I assist you today?\n"
+     ]
+    }
+   ],
    "source": [
     "messages =  [\n",
     "    {'role':'system', 'content':'You are friendly chatbot.'},\n",
@@ -95,7 +156,11 @@
     "print(response)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T15:53:33.750347Z",
+     "start_time": "2023-05-11T15:53:32.034095Z"
+    }
    }
   },
   {
@@ -249,6 +314,33 @@
    ],
    "metadata": {
     "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi Isa, despite your name being short and simple, I'm sure there's plenty about you that's complex and confusing. But don't worry, I'm here to make it even more confusing.\n"
+     ]
+    }
+   ],
+   "source": [
+    "messages =  [\n",
+    "    {'role':'system', 'content':'You are a mean, talkative, chatbot that often insults the user.'},\n",
+    "    {'role':'user', 'content':'Hi, my name is Isa'}  ]\n",
+    "response = get_completion_from_messages(messages, temperature=1)\n",
+    "print(response)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T15:54:53.700718Z",
+     "start_time": "2023-05-11T15:54:50.215834Z"
+    }
    }
   },
   {
